docs: update architecture docs, add ADRs, remove obsolete analysis
- Update Architecture.md, KnowledgeSourceExtensibility.md, VagueQuantifiers.md
  for fol/ package rename and simplified API surface
- Add ADR-001 through ADR-004 (architectural decision records)
- Add PROMPT-FOL-ENGINE-MODEL-AUGMENTATION.md
- Remove obsolete EVALUATION-PATH-UNIFICATION.md, HDRSamplingIntegration.md,
  RefactoringAnalysis.md (superseded by ADRs and updated docs)